--- a/templates/index.html
+++ b/templates/index.html
@@ -85,25 +85,26 @@
           id="brightness"
           min="-255"
           max="255"
-          value="0"
+          value="{{brightness_data}}"
         />
         <label for="">Contrast</label>
         <input
           type="number"
           name="contrast"
           id="contrast"
-          min="-50"
-          max="50"
-          value="0"
+          min="0"
+          max="1.9"
+          step="0.1"
+          value="{{contrast_data}}"
         />
         <label for="">Blur</label>
         <input
           type="number"
           name="blur"
           id="blur"
-          min="-50"
-          max="50"
-          value="0"
+          min="1"
+          max="11"
+          value="{{blur_data}}"
         />
         <label for="">Sharpness</label>
         <input
