--- a/templates/filters.html
+++ b/templates/filters.html
@@ -57,15 +57,12 @@
                   />
                 </div>
                 <div class="col span-1-of-3">
-                  <!-- <input
-                    type="submit"
-                    alt="download"
-                    name="button"
-                    value="Download"
-                    class="download"
-                  /> -->
                   <p class="download">
-                    <a href="{{url_for('download_file1')}}">Download</a>
+                    <a
+                      href="{{url_for('download_file1')}}"
+                      style="text-decoration: none"
+                      >Download</a
+                    >
                   </p>
                 </div>
               </div>
