--- a/static/css/edit.css
+++ b/static/css/edit.css
@@ -3,10 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 .row {
   margin: 0 auto;
   max-width: 1140px;
 }
+
 h1 {
   margin: 0;
   color: #212529;
@@ -17,6 +19,7 @@ h1 {
   text-transform: uppercase;
   margin-bottom: 20px;
 }
+
 html {
   background-color: #212529;
   color: #555;
@@ -25,6 +28,7 @@ html {
   font-size: 20px;
   text-rendering: optimizeLegibility;
 }
+
 /*home page */
 header {
   background-image: linear-gradient(rgba(255, 255, 255), rgba(255, 255, 255));
@@ -32,6 +36,7 @@ header {
   background-position: center;
   height: 100vh;
 }
+
 .hero-text-box {
   position: absolute;
   width: 1140px;
@@ -47,6 +52,7 @@ header {
   margin-left: 40px;
   margin-top: 45px;
 }
+
 .main-nav li a:link,
 .main-nav li a:visited {
   text-decoration: none;
@@ -55,6 +61,7 @@ header {
   font-size: 90%;
   padding: 8px 0;
 }
+
 .main-nav li a:hover,
 .main-nav li a:active {
   border-bottom: 2px solid #55075b;
@@ -73,6 +80,7 @@ header {
   height: 500px;
   padding-left: 30px;
 }
+
 .up_img {
   width: 500px;
   height: 500px;
@@ -111,6 +119,7 @@ input[type="text"] {
   border-radius: 1px;
   margin-left: 10px;
 }
+
 .upload:hover,
 .upload:active {
   background-color: #464040;
@@ -126,7 +135,9 @@ input[type="text"] {
   padding: 4px 6px;
   border-radius: 1px;
   margin-left: 60px;
+  text-decoration: none;
 }
+
 .upload:hover,
 .upload:active {
   background-color: #464040;
@@ -142,11 +153,18 @@ input[type="file"] {
   font-size: 15px;
 }
 
+input[type="number"] {
+  size: 16px;
+  margin-left: 5px;
+  font-size: 10px;
+}
+
 h3 {
   margin-bottom: 30px;
   color: #212529;
   text-align: center;
 }
+
 h5 {
   text-align: center;
   margin-top: -5px;
@@ -183,10 +201,11 @@ h6 {
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
     0 17px 50px 0 rgba(0, 0, 0, 0.59);
 }
+
 label {
   color: #212529;
   margin-bottom: 5px;
-  margin-left: 40px;
+  margin-left: 29px;
 }
 
 p {
@@ -205,6 +224,7 @@ input[type="radio"] {
   margin-left: 40px;
   margin-right: -20px;
 }
+
 .field {
   margin-left: -30px;
   margin-right: -80px;
