--- a/static/css/filters.css
+++ b/static/css/filters.css
@@ -21,13 +21,16 @@
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
     0 17px 50px 0 rgba(0, 0, 0, 0.59);
 }
+
 .button-box-1,
 .button-box-2 {
   margin-top: 50px;
 }
+
 .button-box-1 {
   margin-left: -20px;
 }
+
 .button-box-2 {
   margin-left: 50px;
 }
@@ -38,11 +41,13 @@
   background-color: white;
   margin-top: -10px;
 }
+
 .videoElement {
   width: 100%;
   height: 80vh;
   object-fit: cover;
 }
+
 .capture,
 .clear,
 .download {
@@ -54,6 +59,7 @@
   width: 80%;
   margin-top: -5px;
   margin-left: 22px;
+  text-decoration: none;
 }
 
 .capture:hover,
